# up-hiring

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Makefile  README.md  RUNBOOK.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy-api.yml  e2e.yml
apps/api/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 29034971c685_baseline_empty.py  2e558f969ca0_job_stage_candidate_application_activity.py  5580eabe8ece_tenant_app_user_membership.py
apps/api/src/: config.py  main.py
apps/api/src/api/v1/: __init__.py  _deps.py  applications.py  candidates.py  jobs.py  me.py  webhooks.py  webhooks_clerk.py
apps/api/src/db/: base.py  rls.py  session.py  url.py
apps/api/src/middleware/: clerk.py  jwks.py
apps/api/src/models/: __init__.py  activity.py  application.py  candidate.py  enums.py  job.py  stage.py  tenant.py
apps/api/src/schemas/: __init__.py  activity.py  application.py  candidate.py  job.py  pagination.py  pipeline.py  stage.py  tenant.py
apps/api/src/scripts/: README.md  seed.py  seed_e2e.py
apps/api/src/services/: activity.py  application.py  candidate.py  job.py  provisioning.py  stage_defaults.py  tenant.py  webhook_handlers.py
apps/api/src/utils/: cpf.py  pagination.py
apps/api/tests/: conftest.py  factories.py  test_applications_api.py  test_applications_api_smoke.py  test_candidate_service.py  test_candidates_api.py  test_candidates_api_smoke.py  test_clerk_middleware.py  test_cpf.py  test_db_url.py  test_fixtures_smoke.py  test_job_service.py  test_jobs_api.py  test_jobs_api_smoke.py  test_jwks_client.py  test_me_endpoint.py  test_middleware_clerk.py  test_pagination.py  test_pipeline_api.py  test_pipeline_api_smoke.py  test_rls.py  test_rls_domain.py  test_smoke.py  test_webhook_clerk.py
apps/web/: .gitignore  middleware.ts  next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: error.tsx  layout.tsx  not-found.tsx
apps/web/app/(app)/candidates/: page.tsx
apps/web/app/(app)/candidates/[id]/: page.tsx
apps/web/app/(app)/jobs/: page.tsx
apps/web/app/(app)/jobs/[id]/: page.tsx
apps/web/app/select-org/: page.tsx
apps/web/components/: breadcrumbs.tsx  empty-state.tsx  providers.tsx  sentry-test-button.tsx  skeletons.tsx  telemetry.tsx
apps/web/components/app-shell/: app-shell.tsx  mobile-warning-banner.tsx  nav-items.ts  sidebar.tsx  topbar.tsx
apps/web/components/applications/: add-candidate-dialog.tsx
apps/web/components/candidates/: candidate-form.tsx
apps/web/components/jobs/: job-actions.tsx  job-form.tsx  status-badge.tsx  tiptap-editor.tsx
apps/web/components/kanban/: board.tsx  kanban-card.tsx
apps/web/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  select.tsx  sheet.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
apps/web/lib/: api-types.ts  api.ts  cpf.ts  env.ts  hooks.ts  telemetry.ts  use-api-client.ts  utils.ts
apps/web/tests/: happy-path.spec.ts
(+2 files in other folders)
