[project]
name = "ats-api"
version = "0.0.1"
description = "UpHiring backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.2",
    "redis>=5.2.0",
    "rq>=1.16.2",
    "boto3>=1.35.50",
    "logfire[fastapi,sqlalchemy]>=2.2.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "svix>=1.36.0",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
    "faker>=30.8.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "RET", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Scripts de CLI usam print pra output ao operador — T20 não se aplica.
"src/scripts/*" = ["T201"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --cov=src --cov-report=term-missing"
markers = [
    "rls: testes de Row Level Security (rodam contra Postgres real)",
]

[tool.coverage.run]
# SQLAlchemy 2 usa greenlet pra ponte async/sync. Sem isso coverage perde
# o frame dos handlers de rota async chamados via TestClient/FastAPI DI.
concurrency = ["thread", "greenlet"]
source = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
